--- a/src/variables.css
+++ b/src/variables.css
@@ -79,10 +79,18 @@
 
   color-scheme: dark;
   supported-color-schemes: dark;
+
+  & input[type=search]::-webkit-search-cancel-button {
+    -webkit-filter: invert(100%);
+  }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     @extend .dark-mode; /* stylelint-disable-line at-rule-no-unknown */
+  }
+
+  .light-mode input[type=search]::-webkit-search-cancel-button {
+    -webkit-filter: initial;
   }
 }
